Fix placeholder alignment and throttle API saves

--- a/src/main.css
+++ b/src/main.css
@@ -90,6 +90,7 @@ img {
 }
 
 .truncate-field {
+  text-align: left;
   min-width: 0;
   max-width: 200px;
   white-space: nowrap;
